--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: DelayedSurvFit
 Type: Package
-Title: Damped Anderson Acceleration with Epsilon Monotonicity for Accelerating EM-Like Monotone Algorithms
-Version: 0.1
-Date: 2019-10-11
+Title: Survival Estimation with Delayed Treatment Constraints
+Version: 0.1.1
+Date: 2019-10-14
 Authors@R: c(person("Nicholas", "Henderson", email = "nchender@umich.edu", role = c("cre", "aut")))
 Maintainer: Nicholas Henderson <nchender@umich.edu>
 Imports: stats, utils, survival, quadprog
-Description: Implements the DAAREM method for accelerating the convergence of slow, monotone sequences from smooth, fixed-point iterations such as the EM algorithm. For further details about the DAAREM method. see Henderson, N.C. and Varadhan, R. (2018) <arXiv:1803.06673>.
+Description: Tools for nonparametric survival analysis when two survival curves are restricted to have one of several survival profiles.
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
