--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
-export(DelayedSurvFit, DelayedHazard, ProfileLogLikCO, LogEL, ProfileLogLikSQP, FindActiveSet, CumHazKnownTheta)
+export(DelayedSurvFit, DelayedHazard, ProfileLogLikCO, LogEL, ProfileLogLikSQP, FindActiveSet, CumHazKnownTheta, ConstructConstrMat,
+       rmst, SurvFn, rrml)
 importFrom("quadprog", "solve.QP")
 importFrom("survival", "Surv", "survfit")
 S3method("plot","surv.delay")
