--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,6 +1,6 @@
 export(DelayedSurvFit, DelayedHazard, ProfileLogLikCO, LogEL, ProfileLogLikSQP, FindActiveSet, CumHazKnownTheta, ConstructConstrMat,
-       rmst, SurvFn, rrml, SurvFnKnownTheta)
-importFrom("quadprog", "solve.QP")
+       rmst, SurvFn, rrml, SurvFnKnownTheta, WeightedKMStat, PermutationTest)
 importFrom("survival", "Surv", "survfit")
 importFrom("Dykstra", "dykstra")
+importFrom("nloptr", "slsqp")
 S3method("plot","surv.delay")
