--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: DelayedSurvFit
 Type: Package
-Title: Survival Estimation with Delayed Treatment Constraints
-Version: 0.1.2
-Date: 2019-10-15
+Title: Constrained Survival Estimation with Delayed Treatment
+Version: 0.1.3
+Date: 2020-1-13
 Authors@R: c(person("Nicholas", "Henderson", email = "nchender@umich.edu", role = c("cre", "aut")))
 Maintainer: Nicholas Henderson <nchender@umich.edu>
 Imports: stats, utils, survival, Dykstra, nloptr
+Depends: R (>= 3.5.0)
 Description: Tools for nonparametric survival analysis when two survival curves are restricted to have one of several survival profiles.
 License: GPL-2
 Encoding: UTF-8
